infra/k8s/minikube/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: securedox
  labels:
    app.kubernetes.io/part-of: securedox
